--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,16 +1,19 @@
-// 以修改過以下設定
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "command": "gulp",
+    "version": "2.0.0",
+    "command": "node-sass",
     "isShellCommand": true,
+    "args": [
+        "test.sass",
+        "test.css"
+    ],
+    "showOutput": "always",
     "tasks": [
         {
-            "taskName": "default",
-            "isBuildCommand": true,
-            "showOutput": "always",
-            "isBackground": true
+            "label": "echo",
+            "type": "shell",
+            "command": "echo Hello"
         }
     ]
 }
